finished styling, fixed numOptions bug

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a href="/"><img src="UnderTheButtonLogo.png" alt="logo" class="logo"></img></a>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
