finished submissions.txt

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <a href="/"><img src="UnderTheButtonLogo.png" alt="logo" class="logo"></img></a>
+    <a href="https://www.underthebutton.com"><img src="UnderTheButtonLogo.png" alt="logo" class="logo"></img></a>
 
     <div id="root"></div>
     <!--
